fix image button safari styling

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -9,6 +9,7 @@
   padding: 0;
   cursor: pointer;
   background: none;
+  margin: 0;
 }
 
 @mixin basicButton {
